--- a/src/routes/layout/layout.scss
+++ b/src/routes/layout/layout.scss
@@ -1,5 +1,5 @@
 // @import "../../responsive.scss";
-@import "../../src/responsive.scss";
+@import "../../responsive.scss";
 
 .layout{
     height: 100vh;
