--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+// @tailwind base;
+// @tailwind components;
+// @tailwind utilities;
 
 *{
     padding: 0;
@@ -15,3 +15,34 @@ body{
     font-family: "Lato", sans-serif;
     overflow: hidden;
 }
+   /* Scrollbar styling for WebKit-based browsers (Chrome, Safari) */
+//    &::-webkit-scrollbar {
+//     display: none; /* Height of the horizontal scrollbar (if any) */
+// }
+// &:hover::-webkit-scrollbar {
+//     width: 20px; /* Width of the vertical scrollbar */
+//     height: 20px; /* Height of the horizontal scrollbar (if any) */
+// }
+
+// &::-webkit-scrollbar-thumb {
+//     background-color: darkgrey; /* Color of the scrollbar thumb */
+//     border-radius: 10px; /* Roundness of the scrollbar thumb */
+//     border: 3px solid transparent; /* Creates padding around the thumb */
+//     background-clip: content-box; /* Ensures the border does not overlap the thumb */
+// }
+
+// &::-webkit-scrollbar-track {
+//     // background: #f1f1f1; /* Color of the scrollbar track */
+//     border-radius: 10px; /* Roundness of the scrollbar track */
+//     margin: 5px; /* Margin around the scrollbar track */
+// }
+
+// /* Scrollbar styling for Firefox */
+// &:hover{
+// scrollbar-width: thin; /* Possible values: auto, thin, none */
+// scrollbar-color: darkgrey transparent;/* thumb color and track color */
+// scroll-behavior: initial;
+// // scroll-behavior: ;
+// position: relative;
+//  }
+// }
