--- a/src/components/Filter/filter.scss
+++ b/src/components/Filter/filter.scss
@@ -9,10 +9,12 @@
     .item{
         display: flex;
         flex-direction: column;
-        gap: 20px;
+        // gap: 20px;
+        margin-bottom: 10px;
 
         label{
             font-size: 10px;
+            margin-bottom: 3px;
         }
         input,select{
             width: 100px;
@@ -33,12 +35,17 @@
         justify-content: space-between;
         gap:20px;
 
+
         button{
             width: 100px;
             padding: 10px;
             border: none;
             cursor: pointer;
             background-color: #fece51;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
             img{
                 width: 24px;
