--- a/src/components/NavBar/navbar.scss
+++ b/src/components/NavBar/navbar.scss
@@ -58,6 +58,49 @@ nav{
             padding: 10px 20px;
             margin: 20px;
           }
+
+        .user{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-weight: bold;
+
+            img{
+                width: 40px;
+                height: 40px;
+                border-radius: 50%;
+                object-fit: cover;
+                margin-right: 20px;
+            }
+
+            span{
+                @include sm{
+                    display: none;
+                }
+            }
+            .profile{
+                padding: 12px 24px;
+                background-color: #fece51;
+                cursor: pointer;
+                border: none;
+                border-radius: 4px;
+                position: relative;
+
+                .notification{
+                    position: absolute;
+                    background-color: red;
+                    top: -8px;
+                    right: -8px;
+                    color: white;
+                    width: 26px;
+                    height: 26px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    border-radius: 50%;
+                }
+            }
+        }
       
         .menuIcon{
             display: none;
