--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -1,11 +1,16 @@
+@import '../../responsive.scss';
+
 .card-container{
     display: flex;
     gap: 20px;
-    // margin-bottom: 30px;
 
     .imageContainer{
         flex: 2;
         height: 200px;
+
+        @include sm{
+            display: none;
+        }
 
         img{
             width: 100%;
