--- a/src/components/Chat/chat.scss
+++ b/src/components/Chat/chat.scss
@@ -1,14 +1,16 @@
 .chat{
     display: flex;
     flex-direction: column;
-    height: 100%;
+    // height: 100%;
 
     .messages{
         flex:1;
+        padding-right: 20px;
         display: flex;
         flex-direction: column;
         gap:20px;
         overflow-y: scroll;
+        height: 100%;
 
         h1{
             font-weight: 300;
@@ -33,5 +35,85 @@
     }
     .chatBox{
         flex: 1;
+        background-color: white;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        .top{
+            display: flex;
+            background-color: #f7c14b85;
+            padding: 20px;
+            font-weight: bold;
+            align-items: center;
+            justify-content: space-between;
+
+            .user{
+                display: flex;
+                align-items: center;
+                gap:20px;
+
+                img{
+                    width: 30px;
+                    height: 30px;
+                    border-radius: 50%;
+                    object-fit: cover;
+                }
+
+            }
+            .close{
+                cursor: pointer;
+            }
+        }
+        .center{
+            height: 320px;
+            overflow: scroll;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+
+            .chatMessage{
+                width: 50%;
+
+                &.own{
+                    align-self: flex-end;
+                    text-align: right;
+                }
+
+                span{
+                 font-size: 12px;
+                 background-color: #f7c14b39;   
+                 padding: 2px;
+                 border-radius: 5px;
+                }
+
+            }
+        }
+
+        .bottom{
+            // border-top: 2px solid #f7c14b85;
+            height: 60px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+
+            textarea{
+                flex: 3;
+                height: 100%;
+                border: none;
+                padding: 20px;
+            }
+            button{
+                flex: 1;
+                background-color: #f7c14b85;
+                color: black;
+                height: 100%;
+                cursor: pointer;
+                border: none;
+                // padding: 10px 20px;
+                // padding: ;
+            }
+        }
     }
 }
