--- a/src/index.scss
+++ b/src/index.scss
@@ -13,7 +13,7 @@ a{
 }
 body{
     font-family: "Lato", sans-serif;
-    overflow: hidden;
+    // overflow: hidden;
 }
    /* Scrollbar styling for WebKit-based browsers (Chrome, Safari) */
 //    &::-webkit-scrollbar {
