--- a/src/routes/ProfilePage/profilePage.scss
+++ b/src/routes/ProfilePage/profilePage.scss
@@ -1,9 +1,21 @@
+@import '../../responsive.scss';
+
 .profilePage{
     display: flex;
     height: 100%;
 
+    @include md{
+        flex-direction: column;
+        overflow: scroll;
+    }
+
     .details{
         flex:3;
+
+        @include md{
+            flex: none;
+            height: max-content;
+        }
 
         .wrapper{
             padding-right: 50px;
@@ -46,8 +58,14 @@
         flex:2;
         background-color: #fcf5f3;
         height: 100%;
+        @include md{
+            flex: none;
+            height: max-content;
+            margin-top: 50px;
+        }
         .wrapper{
             padding: 0px 20px;
+            height: 100%;
         }
     }
 }
