--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -26,6 +26,12 @@
         justify-content: space-between;
         gap: 10px;
 
+        @include sm{
+            // flex: none;
+            width: max-content;
+            gap: 20px;
+        }
+
         img{
             width: 16px;
             height: 16px;
@@ -35,6 +41,10 @@
             font-weight: 600;
             color: #444;
             transition: all 0.4s ease;
+
+            @include md{
+                font-size: 18px;
+            }
 
             &:hover{
                 color: #000;
